fix/ increasing inputs heigth, better legibility

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ header {
 
 .addContact input {
     border-radius: 10px;
-    height: 25px;
+    height: 30px;
     text-align: center;
 }
 
@@ -174,6 +174,7 @@ form {
 
     height: 75vh;
     overflow-y: scroll;
+    margin-bottom: 20px;
 }
 
 .contacts::-webkit-scrollbar {
